--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
+.selected {
+  border: 3px solid peachpuff;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: repeat(9, 40px);
+  grid-template-rows: repeat(9, 40px);
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input {
+  border: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+[class*='box-'] {
+  border: solid 1px black;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+div[class*='box-'] {
+  font-weight: bold;
 }
 
-.App-link {
-  color: #61dafb;
+.box-2, .box-11, .box-20, .box-29, .box-38, .box-47, .box-56, .box-65, .box-74 {
+  border-right: 2px solid black;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.box-6, .box-15, .box-24, .box-33, .box-42, .box-51, .box-60, .box-69, .box-78 {
+  border-left: 2px solid black;
+}
+.box-18, .box-19, .box-20, .box-21, .box-22, .box-23, .box-24, .box-25, .box-26 {
+  border-bottom: 2px solid black;
+}
+.box-54, .box-55, .box-56, .box-57, .box-58, .box-59, .box-60, .box-61, .box-62 {
+  border-top: 2px solid black;
 }
