--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,260 @@
-.selected {
-  border: 3px solid peachpuff;
+body:has(.darkmode) {
+  background-color: #161616;
+}
+div.App {
+  font-family: 'Rubik';
+}
+div.App.darkmode {
+  color: white;
+}
+input[type='checkbox'] {
+  display: none;
+}
+label {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  cursor: pointer;
+}
+label svg {
+  fill: white;
+  width: 25px;
+  height: 25px;
+}
+#fg {
+  fill: #161616;
+}
+#bg {
+  fill: gold;
+  transition: all 0.5s ease-in-out
+}
+.darkmode button {
+  color: white;
 }
 
+
+
+/* Nav */
+
+nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 70px;
+  margin-right: 15px;
+}
+
+.logo {
+  font-size: clamp(1.25rem, 10vw, 3rem);
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.logo svg {
+  width: clamp(40px, 15vw, 70px);
+}
+
+.links {
+  display: grid;
+  grid-template-columns: 40px 40px 40px;
+  grid-template-rows: 20px 40px;
+  align-items: center;
+  justify-content: center;
+  margin-right: -10px;
+}
+.links h5 {
+  margin: 0;
+  grid-column: 1 / 4;
+  text-align: center;
+  text-transform: uppercase;
+}
+.links a {
+  padding: 10px;
+}
+.links a svg {
+  height: 20px;
+  width: 20px;
+  transition: all 0.3s ease-in-out;
+  stroke: #000;
+}
+.darkmode .links a svg {
+  stroke: #FFF;
+}
+.links a:hover svg {
+  scale: 1.3;
+}
+.links a:hover .linkedin-logo, .darkmode .links a:hover .linkedin-logo {
+  stroke: #29A3EC;
+}
+.links a:hover .github-logo, .links a:hover .external-logo, .darkmode .links a:hover .github-logo, .darkmode .links a:hover .external-logo {
+  stroke: #EE746C;
+}
+
+
+/* Setup */
+
+.Setup {
+  display: flex;
+  flex-direction: column;
+}
+.Setup h2 {
+  text-align: center;
+}
+ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 25px;
+}
+ul li button {
+  font-size: 1.5rem;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+}
+ul li button:hover {
+  scale: 1.3;
+}
+.selected {
+  scale: 1.3;
+  text-shadow:0 0 15px #EE746C;
+}
+.start-btn {
+  margin-top: 2rem;
+  font-size: 3rem;
+  cursor: pointer;
+  text-transform: uppercase;
+}
+.start-btn:not([disabled]) {
+  animation: bounce 1s linear infinite;
+}
+.start-btn:disabled{
+  opacity: 0;
+}
+@keyframes bounce {
+  0%, 100% {transform: translateY(0);}
+  50% {transform: translateY(5px);}
+}
+
+
+/* Game */
+
+.Game {
+  display: flex;
+  flex-direction: column;
+}
+.Game h3 {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 24px;
+  margin: 1rem 0 .5rem 0;
+}
+.timer {
+  text-align: center;
+  margin-bottom: 1rem;
+}
 .grid {
   display: grid;
   grid-template-columns: repeat(9, 40px);
   grid-template-rows: repeat(9, 40px);
   text-align: center;
+  justify-content: center;
+  position: relative;
 }
-
 input {
   border: none;
+  background-color: transparent;
 }
-
+input:focus-visible {
+  outline: none;
+  background-color: #EE746C;
+}
+input[class*='box-'] {
+  padding: 0;
+  text-align: center;
+  font-size: 1.5rem;
+  cursor: pointer;
+  caret-color: transparent;
+}
 [class*='box-'] {
   border: solid 1px black;
 }
-
 div[class*='box-'] {
   font-weight: bold;
+  font-size: 1.5rem;
+  padding-top: 5px;
+  cursor: default;
 }
-
+.darkmode [class*='box-'] {
+  border: solid 1px #FFF;
+  color: #FFF;
+}
 .box-2, .box-11, .box-20, .box-29, .box-38, .box-47, .box-56, .box-65, .box-74 {
-  border-right: 2px solid black;
+  border-right: 3px solid black;
 }
 .box-6, .box-15, .box-24, .box-33, .box-42, .box-51, .box-60, .box-69, .box-78 {
-  border-left: 2px solid black;
+  border-left: 3px solid black;
 }
 .box-18, .box-19, .box-20, .box-21, .box-22, .box-23, .box-24, .box-25, .box-26 {
-  border-bottom: 2px solid black;
+  border-bottom: 3px solid black;
 }
 .box-54, .box-55, .box-56, .box-57, .box-58, .box-59, .box-60, .box-61, .box-62 {
-  border-top: 2px solid black;
+  border-top: 3px solid black;
 }
+.darkmode .box-2, .darkmode .box-11, .darkmode .box-20, .darkmode .box-29, .darkmode .box-38, .darkmode .box-47, .darkmode .box-56, .darkmode .box-65, .darkmode .box-74 {
+  border-right: 3px solid #FFF;
+}
+.darkmode .box-6, .darkmode .box-15, .darkmode .box-24, .darkmode .box-33, .darkmode .box-42, .darkmode .box-51, .darkmode .box-60, .darkmode .box-69, .darkmode .box-78 {
+  border-left: 3px solid #FFF;
+}
+.darkmode .box-18, .darkmode .box-19, .darkmode .box-20, .darkmode .box-21, .darkmode .box-22, .darkmode .box-23, .darkmode .box-24, .darkmode .box-25, .darkmode .box-26 {
+  border-bottom: 3px solid #FFF;
+}
+.darkmode .box-54, .darkmode .box-55, .darkmode .box-56, .darkmode .box-57, .darkmode .box-58, .darkmode .box-59, .darkmode .box-60, .darkmode .box-61, .darkmode .box-62 {
+  border-top: 3px solid #FFF;
+}
+.game-btns {
+  margin-top: 1rem;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  justify-content: center;
+}
+.new-pzl-btn {
+  width: 100px;
+  margin-top: 1rem;
+  align-self: center;
+}
+.game-btns button, .new-pzl-btn {
+  cursor: pointer;
+  padding: .5rem;
+  border: solid 2px #000;
+  border-radius: 5px;
+}
+.game-btns button:hover, .new-pzl-btn:hover {
+  background-color: #29A3EC;
+}
+.darkmode .game-btns button, .darkmode .new-pzl-btn {
+  border: solid 2px #FFF;
+}
+.solved {
+  transition-property: background-color;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-in;
+  background-color: #EE746C;
+}
+.solved.box-30, .solved.box-31, .solved.box-32, .solved.box-39, .solved.box-41, .solved.box-48, .solved.box-49, .solved.box-50 {
+  transition-delay: 0.2s;
+}
+.solved.box-20, .solved.box-21, .solved.box-22, .solved.box-23, .solved.box-24, .solved.box-29, .solved.box-33, .solved.box-38, .solved.box-42, .solved.box-47, .solved.box-51, .solved.box-56, .solved.box-57, .solved.box-58, .solved.box-59, .solved.box-60 {
+  transition-delay: 0.4s;
+}
+.solved.box-10, .solved.box-11, .solved.box-12, .solved.box-13, .solved.box-14, .solved.box-15, .solved.box-16, .solved.box-19, .solved.box-25, .solved.box-28, .solved.box-34, .solved.box-37, .solved.box-43, .solved.box-46, .solved.box-52, .solved.box-55, .solved.box-61, .solved.box-64, .solved.box-65, .solved.box-66, .solved.box-67, .solved.box-68, .solved.box-69, .solved.box-70 {
+  transition-delay: 0.6s;
+}
+.solved.box-0, .solved.box-1, .solved.box-2, .solved.box-3, .solved.box-4, .solved.box-5, .solved.box-6, .solved.box-7,  .solved.box-8, .solved.box-9, .solved.box-17, .solved.box-18, .solved.box-26, .solved.box-27, .solved.box-35, .solved.box-36, .solved.box-44, .solved.box-45, .solved.box-53, .solved.box-54, .solved.box-62, .solved.box-63, .solved.box-71, .solved.box-72, .solved.box-73, .solved.box-74, .solved.box-75, .solved.box-76, .solved.box-77, .solved.box-78, .solved.box-79, .solved.box-80 {
+  transition-delay: 0.8s;
+}
+
+
