--- a/src/App.css
+++ b/src/App.css
@@ -188,6 +188,7 @@ div[class*='box-'] {
 }
 .darkmode [class*='box-'] {
   border: solid 1px #FFF;
+  border-radius: 0;
   color: #FFF;
 }
 .box-2, .box-11, .box-20, .box-29, .box-38, .box-47, .box-56, .box-65, .box-74 {
