--- a/src/App.css
+++ b/src/App.css
@@ -179,12 +179,16 @@ input[class*='box-'] {
 }
 [class*='box-'] {
   border: solid 1px black;
+  width: 38px;
+  height: 38px;
 }
 div[class*='box-'] {
   font-weight: bold;
   font-size: 1.5rem;
-  padding-top: 5px;
   cursor: default;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .darkmode [class*='box-'] {
   border: solid 1px #FFF;
@@ -193,15 +197,19 @@ div[class*='box-'] {
 }
 .box-2, .box-11, .box-20, .box-29, .box-38, .box-47, .box-56, .box-65, .box-74 {
   border-right: 3px solid black;
+  width: 36px;
 }
 .box-6, .box-15, .box-24, .box-33, .box-42, .box-51, .box-60, .box-69, .box-78 {
   border-left: 3px solid black;
+  width: 36px;
 }
 .box-18, .box-19, .box-20, .box-21, .box-22, .box-23, .box-24, .box-25, .box-26 {
   border-bottom: 3px solid black;
+  height: 36px;
 }
 .box-54, .box-55, .box-56, .box-57, .box-58, .box-59, .box-60, .box-61, .box-62 {
   border-top: 3px solid black;
+  height: 36px;
 }
 .darkmode .box-2, .darkmode .box-11, .darkmode .box-20, .darkmode .box-29, .darkmode .box-38, .darkmode .box-47, .darkmode .box-56, .darkmode .box-65, .darkmode .box-74 {
   border-right: 3px solid #FFF;
